# flycapture_image_acquiring

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  stereo_rgb  stereo_rgb.project  stereo_rgb.workspace
Source/: FlyCap2_to_MatImage.cpp
